--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,197 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.developinggeek.task1admin.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
-</android.support.constraint.ConstraintLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/btn_search"
+                android:text="Search Product"
+                android:textColor="#FFF"
+                android:layout_marginRight="40dp"
+                android:background="@drawable/btn_background"
+                android:layout_centerHorizontal="true"
+                />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="5dp"
+                android:background="#000"
+                android:layout_below="@+id/btn_search"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="post a new product"
+                android:textColor="#212121"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:id="@+id/textView"
+                android:layout_marginLeft="10dp"
+                android:layout_alignBaseline="@+id/main_img_btn"
+                android:layout_alignBottom="@+id/main_img_btn"
+                android:layout_toEndOf="@+id/main_img_btn" />
+
+            <Button
+                android:id="@+id/main_img_btn"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/btn_background"
+                android:paddingBottom="5dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingTop="5dp"
+                android:text="Choose photo"
+                android:textColor="#fff"
+                android:layout_below="@+id/btn_search"
+                android:layout_marginTop="15dp"
+                android:layout_alignStart="@+id/main_image" />
+
+            <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:id="@+id/main_image"
+                android:layout_below="@+id/main_img_btn"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/grey_background"
+                android:scaleType="fitXY"/>
+
+            <TextView
+                android:layout_width="170dp"
+                android:layout_height="40dp"
+                android:id="@+id/main_cat_txt"
+                android:layout_below="@+id/main_image"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/grey_background"
+                android:text="Select category"
+                android:gravity="center"
+                android:textSize="18sp"
+                android:layout_marginLeft="20dp"
+                android:textColor="#000"/>
+
+            <Spinner
+                android:layout_width="150dp"
+                android:layout_height="40dp"
+                android:id="@+id/main_spinner"
+                android:prompt="@string/spinner_prompt"
+                android:layout_marginLeft="200dp"
+                android:layout_below="@+id/main_image"
+                android:layout_marginTop="10dp">
+            </Spinner>
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:id="@+id/main_edt_title"
+                android:layout_below="@+id/main_cat_txt"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:hint="Product Title"
+                android:paddingLeft="20dp"
+                android:textColor="#000"
+                android:background="@drawable/grey_background"
+                />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:id="@+id/main_edt_desc"
+                android:layout_below="@+id/main_edt_title"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:hint="Product Description"
+                android:paddingLeft="20dp"
+                android:textColor="#000"
+                android:background="@drawable/grey_background"
+                />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:id="@+id/main_edt_subcategory"
+                android:layout_below="@+id/main_edt_desc"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:hint="SubCategory"
+                android:paddingLeft="20dp"
+                android:textColor="#000"
+                android:background="@drawable/grey_background"
+                />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:weightSum="2"
+                android:orientation="horizontal"
+                android:id="@+id/container"
+                android:layout_below="@+id/main_edt_subcategory">
+
+                <EditText
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:id="@+id/main_edt_price"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:hint="Price"
+                    android:paddingLeft="20dp"
+                    android:textColor="#000"
+                    android:background="@drawable/grey_background"
+                    />
+
+                <EditText
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:id="@+id/main_edt_stock"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:hint="In stock or not"
+                    android:paddingLeft="20dp"
+                    android:textColor="#000"
+                    android:background="@drawable/grey_background"
+                    />
+
+            </LinearLayout>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/main_btn_upload"
+                android:layout_below="@+id/container"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/btn_background"
+                android:text="Upload"
+                android:textColor="#FFF"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"/>
+
+        </RelativeLayout>
+
+    </ScrollView>
+
+</RelativeLayout>
