--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,8 +21,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="@color/colorPrimary"
-                >
-            </android.support.v7.widget.Toolbar>
+                app:theme="@style/CustomActionBar"/>
 
             <TextView
                 android:layout_width="wrap_content"
