--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,6 +4,9 @@
     <item android:title="search product"
           android:id="@+id/main_menu_search"/>
 
+    <item android:title="add aubcategory"
+          android:id="@+id/main_menu_add_aubcategory"/>
+
     <item android:title="logout"
           android:id="@+id/main_menu_logout"/>
 
