--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -152,19 +152,30 @@
                 android:background="@drawable/grey_background"
                 />
 
-            <EditText
-                android:layout_width="match_parent"
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:id="@+id/main_edt_subcategory"
                 android:layout_below="@+id/main_edt_desc"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:hint="SubCategory"
+                android:text="SubCategory"
+                android:textSize="18sp"
                 android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:gravity="center"
                 android:textColor="#000"
                 android:background="@drawable/grey_background"
                 />
+
+           <Spinner
+               android:layout_width="150dp"
+               android:layout_height="40dp"
+               android:id="@+id/main_subcat_spinner"
+               android:layout_above="@+id/container"
+               android:layout_alignEnd="@+id/main_edt_desc"
+               >
+           </Spinner>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -183,6 +194,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
                     android:hint="Price"
+                    android:inputType="number"
                     android:paddingLeft="20dp"
                     android:textColor="#000"
                     android:background="@drawable/grey_background"
